@@ -38,7 +38,9 @@ enum
   C_IDX,     // Carry bit - for bool only.
 
   X_IDX,     // X - for use with code generation support functions only.
-  Y_IDX      // Y - for use with code generation support functions only.
+  Y_IDX,     // Y - for use with code generation support functions only.
+
+  SP_IDX     // SP - for use with debug info.
 };
 
 enum
